load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files(["toolchain.bzl"])

# The toolchain TYPE lives here; the per-platform toolchain DECLARATIONS
# (and the helm_toolchain rule instances) are emitted into each
# `helm_<plat>` repo by private/repositories.bzl. That way the version
# field on HelmInfo reflects the version actually fetched by
# `helm.version()` rather than being pinned to whatever happens to be
# hardcoded centrally.
toolchain_type(name = "helm")

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    deps = ["//private:providers"],
)
